# ten-vad

C++_Example/: CMakeLists.txt  plot_result.py  ten_vad_example.cc
C++_Example/wave_io/: audio_wave.c  audio_wave.h
